[gd_scene load_steps=13 format=3 uid="uid://naq48ss47n87"]

[ext_resource type="Script" path="res://level.gd" id="1_4rgk2"]
[ext_resource type="PackedScene" uid="uid://c3ej8o1c4i0sl" path="res://characters/player/player.tscn" id="1_acvb5"]
[ext_resource type="Texture2D" uid="uid://bejtxhptebt1e" path="res://assets/sprites/colored_tilemap_packed.png" id="2_d7ado"]
[ext_resource type="Script" path="res://misc/entity_sprites.gd" id="2_g0srj"]
[ext_resource type="Texture2D" uid="uid://bjkcwio7atbui" path="res://map/grass_tile_day.png" id="3_bhpik"]
[ext_resource type="PackedScene" uid="uid://cph0kyg4r5xx" path="res://characters/trader/trader.tscn" id="3_bsrd7"]
[ext_resource type="Texture2D" uid="uid://dr04lj2q3gddj" path="res://map/grass_tile_night.png" id="4_sicnp"]
[ext_resource type="PackedScene" uid="uid://0llnnacyf2hd" path="res://misc/tile_pointer.tscn" id="5_kgbhf"]
[ext_resource type="Script" path="res://enemies/EnemySpawners.gd" id="6_xmj56"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_x47nm"]
texture = ExtResource("2_d7ado")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
11:3/0 = 0
12:3/0 = 0
8:2/0 = 0
8:3/0 = 0
8:4/0 = 0
9:4/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
11:6/0 = 0
10:6/0 = 0
9:3/0 = 0
9:2/0 = 0
11:4/0 = 0
12:4/0 = 0
10:7/0 = 0
9:8/0 = 0
9:7/0 = 0
12:2/0 = 0
10:4/0 = 0
8:5/0 = 0
7:6/0 = 0
6:6/0 = 0
5:7/0 = 0
5:6/0 = 0
6:5/0 = 0
7:4/0 = 0
10:2/0 = 0
11:2/0 = 0
10:3/0 = 0
5:5/0 = 0
4:5/0 = 0
3:5/0 = 0
2:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
7:5/0 = 0
13:3/0 = 0
4:6/0 = 0
2:7/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:7/0 = 0
12:6/0 = 0
11:7/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
13:7/0 = 0
12:7/0 = 0
8:8/0 = 0
4:9/0 = 0
3:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
11:9/0 = 0
13:9/0 = 0
2:9/0 = 0
1:9/0 = 0
0:9/0 = 0
0:8/0 = 0
1:8/0 = 0
4:7/0 = 0
1:7/0 = 0
3:7/0 = 0
0:7/0 = 0
0:6/0 = 0
1:5/0 = 0
0:5/0 = 0
11:1/0 = 0
10:1/0 = 0
9:1/0 = 0
8:1/0 = 0
7:1/0 = 0
7:2/0 = 0
12:1/0 = 0
13:1/0 = 0
13:0/0 = 0
12:0/0 = 0
11:0/0 = 0
10:0/0 = 0
9:0/0 = 0
8:0/0 = 0
7:0/0 = 0
13:2/0 = 0
7:3/0 = 0
12:5/0 = 0
13:5/0 = 0
13:6/0 = 0
13:4/0 = 0
6:7/0 = 0

[sub_resource type="TileSet" id="TileSet_5ls1a"]
tile_size = Vector2i(8, 8)
sources/1 = SubResource("TileSetAtlasSource_x47nm")

[sub_resource type="Environment" id="Environment_ey755"]

[node name="Level" type="Node2D"]
script = ExtResource("1_4rgk2")

[node name="Ground" type="Node2D" parent="." node_paths=PackedStringArray("day_sprite", "night_sprite")]
script = ExtResource("2_g0srj")
day_sprite = NodePath("Day")
night_sprite = NodePath("Night")

[node name="Day" type="Sprite2D" parent="Ground"]
texture_repeat = 2
texture = ExtResource("3_bhpik")
region_enabled = true
region_rect = Rect2(0, 0, 1000, 1000)

[node name="Night" type="Sprite2D" parent="Ground"]
texture_repeat = 2
texture = ExtResource("4_sicnp")
region_enabled = true
region_rect = Rect2(0, 0, 1000, 1000)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_5ls1a")
format = 2
layer_0/tile_data = PackedInt32Array(-720917, 131073, 5, -655381, 131073, 5, -589844, 131073, 5, -524308, 131073, 5, -458772, 131073, 5, -393236, 131073, 5, -327700, 131073, 5, -262164, 131073, 5, -196628, 131073, 5, -131092, 131073, 5, -65556, 131073, 5, -20, 131073, 5, 65516, 131073, 5, 131052, 131073, 5, 196588, 131073, 5, 262124, 131073, 5, 327660, 131073, 5, 393196, 131073, 5, 458732, 131073, 5, 524268, 131073, 5, 589804, 131073, 5, 655340, 131073, 5, -786453, 131073, 5, -851989, 131073, 5, -917525, 131073, 5, -983061, 131073, 5, -1048596, 131073, 5, -1048595, 131073, 5, -1048594, 131073, 5, -1114130, 131073, 5, -1114129, 131073, 5, -1114128, 131073, 5, -1114127, 131073, 5, -1114126, 131073, 5, -1114125, 131073, 5, -1114124, 131073, 5, -1114123, 131073, 5, -1114122, 131073, 5, -1114121, 131073, 5, -1114120, 131073, 5, -1114119, 131073, 5, -1114118, 131073, 5, -1114117, 131073, 5, -1114116, 131073, 5, -1114115, 131073, 5, -1114114, 131073, 5, -1114113, 131073, 5, -1179648, 131073, 5, -1179647, 131073, 5, -1179646, 131073, 5, -1179645, 131073, 5, -1179644, 131073, 5, -1179643, 131073, 5, -1179642, 131073, 5, -1179641, 131073, 5, -1179640, 131073, 5, -1179639, 131073, 5, -1179638, 131073, 5, -1179637, 131073, 5, -1179636, 131073, 5, -1179635, 131073, 5, -1179634, 131073, 5, -1179633, 131073, 5, -1179632, 131073, 5, -1179631, 131073, 5, -1179630, 131073, 5, -1179629, 131073, 5, -1179628, 131073, 5, -1179627, 131073, 5, -1179626, 131073, 5, -1114090, 131073, 5, -1114089, 131073, 5, -1048552, 131073, 5, -983016, 131073, 5, -983015, 131073, 5, -917478, 131073, 5, -851942, 131073, 5, -786405, 131073, 5, -720868, 131073, 5, -655332, 131073, 5, -589796, 131073, 5, -524260, 131073, 5, -458724, 131073, 5, -393188, 131073, 5, -327652, 131073, 5, -262116, 131073, 5, -196580, 131073, 5, -131044, 131073, 5, -65508, 131073, 5, 28, 131073, 5, 65564, 131073, 5, 131100, 131073, 5, 196636, 131073, 5, 262172, 131073, 5, 327708, 131073, 5, 393244, 131073, 5, 458780, 131073, 5, 524316, 131073, 5, 720876, 131073, 5, 786413, 131073, 5, 851950, 131073, 5, 851951, 131073, 5, 917488, 131073, 5, 917489, 131073, 5, 983026, 131073, 5, 983027, 131073, 5, 983028, 131073, 5, 983029, 131073, 5, 983030, 131073, 5, 983031, 131073, 5, 983032, 131073, 5, 983033, 131073, 5, 983034, 131073, 5, 983035, 131073, 5, 983036, 131073, 5, 983037, 131073, 5, 983038, 131073, 5, 983039, 131073, 5, 917504, 131073, 5, 917505, 131073, 5, 917506, 131073, 5, 917507, 131073, 5, 851972, 131073, 5, 851973, 131073, 5, 851974, 131073, 5, 851975, 131073, 5, 851976, 131073, 5, 851977, 131073, 5, 851978, 131073, 5, 786443, 131073, 5, 786444, 131073, 5, 786445, 131073, 5, 786446, 131073, 5, 786447, 131073, 5, 786448, 131073, 5, 720913, 131073, 5, 720914, 131073, 5, 720915, 131073, 5, 720916, 131073, 5, 720917, 131073, 5, 720918, 131073, 5, 655383, 131073, 5, 655384, 131073, 5, 655385, 131073, 5, 655386, 131073, 5, 655387, 131073, 5, 655388, 131073, 5, 655389, 131073, 5, 655390, 131073, 5, 589854, 131073, 5, 589855, 131073, 5, 589853, 131073, 5, 524315, 131073, 5, 655380, 786433, 8, 589844, 786433, 8, 589843, 786433, 8, 524307, 786433, 8, 458771, 786433, 8, 393235, 786433, 8, 327699, 786433, 8, 262162, 786433, 8, 196626, 786433, 8, 196625, 786433, 8, 131089, 786433, 8, 65553, 786433, 8, 17, 786433, 8, -65518, 786433, 8, -131054, 786433, 8, -196590, 786433, 8, -196589, 786433, 8, -262125, 786433, 8, -262124, 786433, 8, -327660, 786433, 8, -393196, 786433, 8, -393195, 786433, 8, -458731, 786433, 8, -524267, 786433, 8, -589803, 786433, 8, -589802, 786433, 8, -655338, 786433, 8, -655337, 786433, 8, -655336, 786433, 8, -655335, 786433, 8, -655334, 786433, 8, -655333, 786433, 8, -720869, 786433, 8)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ey755")

[node name="YSort" type="Node2D" parent="."]

[node name="Player" parent="YSort" instance=ExtResource("1_acvb5")]

[node name="Trader" parent="YSort" instance=ExtResource("3_bsrd7")]
position = Vector2(-27, 2)

[node name="TilePointer" parent="." node_paths=PackedStringArray("player") instance=ExtResource("5_kgbhf")]
modulate = Color(0.976471, 0, 0.211765, 1)
player = NodePath("../YSort/Player")

[node name="EnemySpawners" type="Node2D" parent="." groups=["Spawner"]]
position = Vector2(-300, 0)
script = ExtResource("6_xmj56")

[node name="SpawnerNorth" type="Marker2D" parent="EnemySpawners"]
position = Vector2(309, -129)

[node name="SpawnerSouth" type="Marker2D" parent="EnemySpawners"]
position = Vector2(312, 99)

[node name="SpawnerWest" type="Marker2D" parent="EnemySpawners"]
position = Vector2(165, -9)

[node name="SpawnerEast" type="Marker2D" parent="EnemySpawners"]
position = Vector2(510, -6)

[node name="ProjectileContainer" type="Node2D" parent="." groups=["ProjectileContainer"]]
